--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello practise</h1>
+    <h1>hello practise git</h1>
+    <h2>practising git</h2>
 </body>
 </html>
